--- a/inventory.gcp.yaml
+++ b/inventory.gcp.yaml
@@ -1,8 +1,8 @@
 plugin: gcp_compute
 projects:
-- {{lookup('env', 'GCP_PROJECT')}}
+- {{lookup('env','GOOGLE_CLOUD_PROJECT')}}
 auth_kind: serviceaccount
-service_account_file: {{lookup('env', 'GCP_SERVICE_ACCOUNT_FILE')}}
+service_account_file: {{ lookup('env','GOOGLE_CLOUD_CRED')}}
 keyed_groups:
   # Create groups from GCE labels
   - key: labels
