--- a/inventory.gcp.yaml
+++ b/inventory.gcp.yaml
@@ -1,5 +1,8 @@
 plugin: gcp_compute
 auth_kind: serviceaccount
+projects:
+  # This value will be subsituted by sed command
+  - ENTER_PROJECT_NAME
 keyed_groups:
   # Create groups from GCE labels
   - key: labels
